ags (5.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_solver_matrix_solve_all_by_column()
	* implemented ags_solver_matrix_solve_default()
	* minor bug-fixes
	* reverted some changes in ags_hq_pitch_util.c
	* reverted some changes in ags_fast_pitch_util.c

ags (5.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes

ags (5.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_wah_wah_util.[ch]
	* fixed some missing XML persistence of AgsSF2Synth and AgsSFZSynth effect controls
	* minor improvements

ags (5.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSetPresets task
	* minor improvements

ags (5.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented per machine presets of format and samplerate in UI
	* implemented per instrument input information about format and samplerate in UI
	* modified envelope functions apply LFO to amount
	* refactored ags-fx-dssi
	* refactored ags-fx-vst3
	* refactored ags-fx-ladspa

ags (5.2.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_midi_util.c false conditions

ags (5.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_tremolo_util.c broken LFO
	* fixed ags-fx-tremolo missing samplerate
	* implemented getter/setter of tremolo LFO offset
	* implemented getter/setter of vibrato LFO offset
	* implemented getter/setter of wah-wah LFO offset

ags (5.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-tremolo default value and range of ports
	* fixed ags-fx-sf2-synth default value and range of ports
	* fixed ags-fx-sfz-synth default value and range of ports
	* fixed ags-fx-wah-wah default value and range of ports

ags (5.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixes to gtk-doc

ags (5.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]